# psql2mysql

./: .gitignore  .mailmap  .travis.yml  README.md  psql2mysql.py  requirements.txt  setup.cfg  setup.py  test-psql2mysql.py  test-requirements.txt
psql2mysql/: __init__.py  datetime2decimal.py
psql2mysql/tests/: test_dbdatamigrator.py  test_dbwrapper.py
tests/integration/: docker-compose.yml  neutron.sql  run_tests.sh
