[metadata]
name = psql2mysql
summary = Copy data from PostgreSQL databases to MySQL
description-file = README.md
home-page = https://github.com/SUSE/psql2mysql
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[entry_points]
console_scripts =
    psql2mysql = psql2mysql:main
